--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@types/node": "20.5.3",
@@ -17,6 +18,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.3",
+    "identity-obj-proxy": "^3.0.0",
     "laravel-echo": "^1.15.2",
     "next": "13.4.19",
     "postcss": "8.4.28",
@@ -28,5 +30,14 @@
     "typescript": "5.1.6",
     "yup": "^1.2.0",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "msw": "^1.3.2"
   }
 }
