feature(private message): api + websocket integration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,17 @@ services:
     depends_on:
       - db-rembugan
     entrypoint: php artisan serve --host 0.0.0.0
+  ws-rembugan:
+    container_name: ws-rembugan
+    image: php:8.1-fpm
+    ports:
+      - 6001:6001
+    volumes:
+      - ./backend:/app
+    depends_on:
+      - db-rembugan
+    working_dir: /app
+    entrypoint: php artisan websocket:serve
   db-rembugan:
     image: mysql
     container_name: db-rembugan
