--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,6 +1,6 @@
 {
-  "extends": ["next/babel","next/core-web-vitals"]
-  "rules": {
-    "@next/next/no-img-element": 0
-  }
+    "extends": ["next/babel", "next/core-web-vitals"],
+    "rules": {
+        "@next/next/no-img-element": 0
+    }
 }
