--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.3",
     "identity-obj-proxy": "^3.0.0",
+    "immer": "^10.0.3",
     "laravel-echo": "^1.15.2",
     "next": "13.4.19",
     "postcss": "8.4.28",
@@ -29,7 +30,7 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yup": "^1.2.0",
-    "zustand": "^4.4.1"
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
